# DotBeltNIF

./: .gitignore  CMakeLists.txt  Hello.runtimeconfig.json  Justfile  README.md  main.cpp
DotNetLib/: HelloWorld.sln
DotNetLib/DotNetLib/: DotNetLib.csproj  Lib.cs
HelloWorld/: HelloWorld.sln
HelloWorld/Hello/: Entry.cs
